affinityDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: newdep
  name: newdep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newdep
  strategy: {}
  template:
    metadata:
      labels:
        app: newdep  
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: color
            operator: In
            values:
            - blue
            - red   
    spec:
      containers:
      - image: cassandra
        name: cassandra
        resources: {}
status: {}
