busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  busybox
  namespace: prod
  labels:
    app:  busybox
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  busybox
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: busybox
        image:  busybox
        containerPort:  80
