cassandra-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cassandra
  labels:
    name: database
spec:
  containers:
  - name: cassandra-container
    image: cassandra
    ports:
      - containerPort: 8080
    command: ["/opt/cassandra/bin/cqlsh"]
    args: ["$(hostname,DB_User,DB_Password)"]
