cassandra2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2021-01-13T08:13:20Z"
  labels:
    name: database
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:name: {}
      f:spec:
        f:containers:
          k:{"name":"database-container"}:
            .: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:ports:
              .: {}
              k:{"containerPort":3030,"protocol":"TCP"}:
                .: {}
                f:containerPort: {}
                f:protocol: {}
            f:resources:
              .: {}
              f:limits:
                .: {}
                f:cpu: {}
                f:memory: {}
              f:requests:
                .: {}
                f:cpu: {}
                f:memory: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kubectl-create
    operation: Update
    time: "2021-01-13T08:13:20Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"172.17.0.5"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2021-01-13T08:13:30Z"
  name: cassandra
  namespace: prod
  resourceVersion: "39808"
  uid: f04ee73b-761c-4475-8bc1-d3464ca3eebf
spec:
  containers:
  - image: cassandra
    imagePullPolicy: Always
    name: database-container
    ports:
    - containerPort: 3030
      protocol: TCP
    resources:
      limits:
        cpu: 500m
        memory: 128Mi
      requests:
        cpu: 500m
        memory: 128Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-jjcm7
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-jjcm7
    secret:
      defaultMode: 420
      secretName: default-token-jjcm7
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-01-13T08:13:20Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-01-13T08:13:30Z"
    message: 'containers with unready status: [database-container]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-01-13T08:13:30Z"
    message: 'containers with unready status: [database-container]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-01-13T08:13:20Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://ffe4727de1605cc8c27a4c4a8a63d63ff11d466bb087230c69def9f6f240bec4
    image: cassandra:latest
    imageID: docker-pullable://cassandra@sha256:76074466aaffaf0b00944d155efb168abbe75393d84a9d6afec41a7984df80ac
    lastState:
      terminated:
        containerID: docker://ffe4727de1605cc8c27a4c4a8a63d63ff11d466bb087230c69def9f6f240bec4
        exitCode: 137
        finishedAt: "2021-01-13T08:24:30Z"
        reason: OOMKilled
        startedAt: "2021-01-13T08:24:29Z"
    name: database-container
    ready: false
    restartCount: 7
    started: false
    state:
      waiting:
        message: back-off 5m0s restarting failed container=database-container pod=cassandra_prod(f04ee73b-761c-4475-8bc1-d3464ca3eebf)
        reason: CrashLoopBackOff
  hostIP: 192.168.99.101
  phase: Running
  podIP: 172.17.0.5
  podIPs:
  - ip: 172.17.0.5
  qosClass: Guaranteed
  startTime: "2021-01-13T08:13:20Z"
