cassandradep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  cassandra
  namespace: prod
  labels:
    app:  cassandra
spec:
  selector:
    matchLabels:
      app: cassandra
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  cassandra
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  cassandra
        image:  cassandra:latest        
        ports:
        - containerPort:  80
          name:  cassandra
      restartPolicy: Always
