deploymentWithSecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
      - name: my-container
        image: cassandra
        ports:
          - containerPort: 8080
        command: ["/opt/cassandra/bin/cqlsh"]
        args: ["$(hostname,DB_User,DB_Password)"]
