deplyoments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
      - name: prodcontainer
        image: cassandra
        ports:
        - containerPort: 2020
