kibana.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kibana
  namespace: prod
  labels:
    app: kibana
spec:
  containers:
  - name: kibana
    image: docker.elastic.co/kibana/kibana:7.10.2
    resources:
      limits:
        cpu: 200m
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 1Gi    
    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
    - name: localtime
      mountPath: /etc/localtime
  volumes:
    - name: localtime
      hostPath:
        path: /usr/share/zoneinfo/Asia/Shanghai
  restartPolicy: Always
