busyService.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: busybox
  name: busybox
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: busybox
status:
  loadBalancer: {}
