cassandraLoadBalancerService.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  namespace: prod
spec:
  selector:
    app: cassandra
  type: LoadBalancer
  ports:
  - name: cassandra
    port: 9042
    protocol: TCP
