nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: external
  namespace: prod  
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - name: nginxport
    port: 80
    targetPort: 80 
    protocol: TCP
    nodePort: 30005
